<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="menu" />
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_dot">.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="muliple">X</string>
    <string name="devide">/</string>
    <string name="prcntage">%</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="MP">M+</string>
    <string name="MM">M-</string>
    <string name="C">C</string>







</resources>