<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="397dp"
        android:layout_height="444dp"
        android:background="@drawable/rectangle_shape"
        android:backgroundTint="@color/view_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/divideBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/circle"

        android:backgroundTint="@color/BUTTON_COLOR"
        android:onClick="ope"
        android:text="@string/devide"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/multipleBtn"
        app:layout_constraintStart_toEndOf="@+id/cleanBtn" />

    <Button
        android:id="@+id/oneBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"


        android:layout_marginStart="4dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/number_1"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/dotBut"
        app:layout_constraintStart_toStartOf="@+id/fourBtn" />

    <Button
        android:id="@+id/fiveBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"

        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/number_5"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/eightBtn"
        app:layout_constraintTop_toBottomOf="@+id/eightBtn" />

    <Button
        android:id="@+id/nineBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/circle"

        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/number_9"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/eightBtn"
        app:layout_constraintStart_toEndOf="@+id/eightBtn"
        app:layout_constraintTop_toTopOf="@+id/eightBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cleanBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"

        android:text="@string/C"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/divideBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/equalBtn"
        android:layout_width="77dp"
        android:layout_height="142dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/equal"

        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dotBut"
        app:layout_constraintEnd_toEndOf="@+id/plusBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plusBtn"
        app:layout_constraintTop_toTopOf="@+id/threeBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"

        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="⌫"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/multipleBtn"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/sixBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"

        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/number_6"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/fiveBtn"
        app:layout_constraintStart_toStartOf="@+id/nineBtn" />

    <Button
        android:id="@+id/sevenBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle"

        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/number_7"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/eightBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cleanBtn"
        app:layout_constraintTop_toBottomOf="@+id/cleanBtn" />

    <Button
        android:id="@+id/eightBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:background="@drawable/circle"

        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/number_8"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/sevenBtn"
        app:layout_constraintStart_toStartOf="@+id/divideBtn" />

    <Button
        android:id="@+id/twoBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:background="@drawable/circle"

        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/number_2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/oneBtn"
        app:layout_constraintStart_toStartOf="@+id/fiveBtn" />

    <Button
        android:id="@+id/threeBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"

        android:text="@string/number_3"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/twoBtn"
        app:layout_constraintStart_toStartOf="@+id/sixBtn" />

    <Button
        android:id="@+id/fourBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/number_4"

        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fiveBtn"
        app:layout_constraintStart_toStartOf="@+id/sevenBtn" />

    <Button
        android:id="@+id/multipleBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/muliple"

        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintStart_toEndOf="@+id/divideBtn"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/minusBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"

        android:text="@string/minus"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/nineBtn"
        app:layout_constraintStart_toStartOf="@+id/backBtn" />

    <Button
        android:id="@+id/plusBtn"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"

        android:text="@string/plus"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/sixBtn"
        app:layout_constraintStart_toStartOf="@+id/minusBtn" />

    <Button
        android:id="@+id/dotBut"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/number_dot"
        android:textAlignment="center"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/zeroBtn"
        app:layout_constraintEnd_toStartOf="@+id/zeroBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zeroBtn"
        android:layout_width="182dp"
        android:layout_height="62dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/BUTTON_COLOR"
        android:text="@string/number_0"

        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/equalBtn" />

    <TextView
        android:id="@+id/operationShow"
        android:layout_width="357dp"
        android:layout_height="260dp"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        android:textColor="#F4F1F1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="196dp"
        android:textColor="#F4EFEF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/operationShow"
        app:layout_constraintTop_toTopOf="@+id/operationShow" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>